--- a/TaxiKit.Core/TaxiKit.Core.Tests/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core.Tests/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Akka" version="1.0.3" targetFramework="net46" />
+  <package id="Akka.Cluster" version="1.0.3.11-beta" targetFramework="net46" />
   <package id="Akka.DI.Core" version="1.0.3" targetFramework="net46" />
   <package id="Akka.Logger.Serilog" version="1.0.3" targetFramework="net46" />
   <package id="Akka.Remote" version="1.0.3" targetFramework="net46" />
   <package id="Akka.TestKit" version="1.0.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.521" targetFramework="net46" />
   <package id="Helios" version="1.4.0" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net46" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" />
