some more cluster experiments

--- a/TaxiKit.Core/TaxiKit.Core.Tests/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="Akka.Logger.Serilog" version="1.0.3" targetFramework="net46" />
   <package id="Akka.Remote" version="1.0.3" targetFramework="net46" />
   <package id="Akka.TestKit" version="1.0.3" targetFramework="net46" />
+  <package id="Akka.TestKit.Xunit2" version="1.0.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.521" targetFramework="net46" />
   <package id="Helios" version="1.4.0" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
