--- a/TaxiKit.Core/TaxiKit.Core.Service/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core.Service/packages.config
@@ -7,6 +7,8 @@
   <package id="Akka.Remote" version="1.0.3" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.521" targetFramework="net46" />
   <package id="Helios" version="1.4.0" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
@@ -14,5 +16,8 @@
   <package id="Rx-Core" version="2.2.5" targetFramework="net46" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net46" />
-  <package id="Serilog" version="1.3.43" targetFramework="net46" />
+  <package id="Serilog" version="1.5.5" targetFramework="net46" />
+  <package id="Topshelf" version="3.2.0" targetFramework="net46" />
+  <package id="Topshelf.Linux" version="1.0.12.11" targetFramework="net46" />
+  <package id="Topshelf.Serilog" version="3.2.0" targetFramework="net46" />
 </packages>
