Actor system loggin enabled. Added default akka.config

--- a/TaxiKit.Core/TaxiKit.Core.Service/akka.config
+++ b/TaxiKit.Core/TaxiKit.Core.Service/akka.config
@@ -3,6 +3,38 @@
   <hocon>
     <![CDATA[
 {
+  akka {
+    loggers = ["Akka.Logger.Serilog.SerilogLogger, Akka.Logger.Serilog"]
+    stdout-loglevel : DEBUG
+    log-config-on-start : on
+    loglevel : DEBUG
+
+    actor {
+      debug {
+        receive = on
+        autoreceive = on
+        lifecycle = on
+        event-stream = on
+        unhandled = on
+      }
+      provider = "Akka.Cluster.ClusterActorRefProvider, Akka.Cluster"
+      default-dispatcher {
+        type = TaskDispatcher
+      }
+    }
+    remote {
+      helios {
+        tcp {
+          hostname = 127.0.0.1
+          port = 0
+        }
+      }
+    }
+    cluster {
+      auto-down-unreachable-after = 15s
+      seed-nodes = []
+    }
+  }
 }
 ]]>
   </hocon>
