--- a/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
+++ b/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
@@ -127,6 +127,9 @@
     <Content Include="licenses\license.txt" />
     <Content Include="licenses\protoc-license.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Directives\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
