--- a/TaxiKit.Core/TaxiKit.Core.TestKit/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core.TestKit/packages.config
@@ -5,6 +5,8 @@
   <package id="Akka.DI.Core" version="1.0.3" targetFramework="net46" />
   <package id="Akka.Logger.Serilog" version="1.0.3" targetFramework="net46" />
   <package id="Akka.Remote" version="1.0.3" targetFramework="net46" />
+  <package id="Akka.TestKit" version="1.0.3" targetFramework="net452" />
+  <package id="Akka.TestKit.Xunit2" version="1.0.3" targetFramework="net452" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.521" targetFramework="net46" />
