--- a/TaxiKit.Core/TaxiKit.Core.TestKit/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core.TestKit/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="Serilog" version="1.5.9" targetFramework="net46" />
+  <package id="StackExchange.Redis" version="1.0.481" targetFramework="net452" />
   <package id="xunit" version="2.0.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net46" />
