--- a/TaxiKit.Core/TaxiKit.Core.Tests/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core.Tests/packages.config
@@ -17,6 +17,7 @@
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net46" />
   <package id="Serilog" version="1.5.9" targetFramework="net46" />
+  <package id="StackExchange.Redis" version="1.0.481" targetFramework="net452" />
   <package id="xunit" version="2.0.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net46" />
