--- a/TaxiKit.Core/TaxiKit.Core/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core/packages.config
@@ -15,4 +15,5 @@
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net46" />
   <package id="Serilog" version="1.5.9" targetFramework="net46" />
+  <package id="StackExchange.Redis" version="1.0.481" targetFramework="net452" />
 </packages>
