--- a/TaxiKit.Core/TaxiKit.Core.TestKit/TaxiKit.Core.TestKit.csproj
+++ b/TaxiKit.Core/TaxiKit.Core.TestKit/TaxiKit.Core.TestKit.csproj
@@ -93,6 +93,7 @@
       <HintPath>..\..\packages\Helios.1.4.1\lib\net45\Helios.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
