--- a/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
+++ b/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
@@ -130,6 +130,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cluster\ClusterLoggingActor.cs" />
+    <Compile Include="Guarantee\GuaranteeEnvelope.cs" />
+    <Compile Include="Guarantee\GuaranteeRecieverActor.cs" />
+    <Compile Include="Guarantee\GuaranteeSenderActor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DateTimeWrapper.cs" />
   </ItemGroup>
