Just to store progress

--- a/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
+++ b/TaxiKit.Core/TaxiKit.Core/TaxiKit.Core.csproj
@@ -89,6 +89,10 @@
       <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Redlock.CSharp">
+      <HintPath>..\..\packages\redlock-cs.1.0.0.1\lib\net45\Redlock.CSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Serilog, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Serilog.1.5.9\lib\net45\Serilog.dll</HintPath>
