--- a/ClusterKit.Core/ClusterKit.Core.Tests/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.Tests/packages.config
@@ -21,10 +21,11 @@
   <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net452" />
   <package id="Serilog" version="1.5.11" targetFramework="net452" />
   <package id="StackExchange.Redis" version="1.0.481" targetFramework="net452" />
-  <package id="xunit" version="2.1.0-beta4-build3109" targetFramework="net452" />
+  <package id="xunit" version="2.1.0-rc1-build3168" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.assert" version="2.1.0-beta4-build3109" targetFramework="net452" />
-  <package id="xunit.core" version="2.1.0-beta4-build3109" targetFramework="net452" />
-  <package id="xunit.extensibility.core" version="2.1.0-beta4-build3109" targetFramework="net452" />
-  <package id="xunit.runner.console" version="2.1.0-beta4-build3109" targetFramework="net452" />
+  <package id="xunit.assert" version="2.1.0-rc1-build3168" targetFramework="net452" />
+  <package id="xunit.core" version="2.1.0-rc1-build3168" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.1.0-rc1-build3168" targetFramework="net452" />
+  <package id="xunit.extensibility.execution" version="2.1.0-rc1-build3168" targetFramework="net452" />
+  <package id="xunit.runner.console" version="2.1.0-rc1-build3168" targetFramework="net452" />
 </packages>
