--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\..\packages\Akka.Cluster.1.0.4.12-beta\lib\net45\Akka.Cluster.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Akka.DI.CastleWindsor">
+      <HintPath>..\..\packages\Akka.DI.CastleWindsor.1.0.4\lib\net45\Akka.DI.CastleWindsor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Akka.DI.Core, Version=1.0.4.12, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Akka.DI.Core.1.0.4\lib\net45\Akka.DI.Core.dll</HintPath>
