--- a/ClusterKit.Core/ClusterKit.Core/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Akka" version="1.0.4" targetFramework="net452" />
   <package id="Akka.Cluster" version="1.0.4.12-beta" targetFramework="net452" />
+  <package id="Akka.DI.CastleWindsor" version="1.0.4" targetFramework="net452" />
   <package id="Akka.DI.Core" version="1.0.4" targetFramework="net452" />
   <package id="Akka.Logger.Serilog" version="1.0.4" targetFramework="net452" />
   <package id="Akka.Remote" version="1.0.4" targetFramework="net452" />
