--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -191,6 +191,10 @@
       <Project>{ba97beed-b078-499d-8c00-6a3d4a0635f2}</Project>
       <Name>ClusterKit.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.Client\ClusterKit.Web.Client.csproj">
+      <Project>{8e543ea4-65de-475f-8045-c094cde58e29}</Project>
+      <Name>ClusterKit.Web.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web\ClusterKit.Web.csproj">
       <Project>{477b201a-a30c-4360-b56a-6f61c049bb04}</Project>
       <Name>ClusterKit.Web</Name>
