--- a/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Configuration\ConfigurationTest.cs" />
     <Compile Include="Guarantee\GuaranteeReciverTest.cs" />
     <Compile Include="Guarantee\GuaranteeSenderTests.cs" />
+    <Compile Include="Ping\PingTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestUtils\CoreTestKitTests.cs" />
   </ItemGroup>
