Nuget package createion test

--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -171,6 +171,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="ClusterKit.Core.nuspec" />
     <None Include="packages.config" />
     <None Include="Resources\akka.hocon" />
   </ItemGroup>
