--- a/ClusterKit.Web/ClusterKit.Web/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="Akka.Remote" version="1.0.4" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
+  <package id="ClusterKit.Core" version="0.0.0.16-master" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="1.4.1" targetFramework="net46" />
@@ -22,6 +23,9 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net46" />
+  <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net46" />
+  <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net46" />
   <package id="Serilog" version="1.5.11" targetFramework="net46" />
   <package id="StackExchange.Redis" version="1.0.481" targetFramework="net46" />
 </packages>
