--- a/ClusterKit.Web/ClusterKit.Web.SignalR/ClusterKit.Web.SignalR.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.SignalR/ClusterKit.Web.SignalR.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ClusterKit.Web.SignalR</RootNamespace>
     <AssemblyName>ClusterKit.Web.SignalR</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -206,6 +207,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="ClusterKit.Web.SignalR.nuspec" />
     <None Include="packages.config" />
     <None Include="Resources\akka.hocon">
       <SubType>Designer</SubType>
