--- a/ClusterKit.Web/ClusterKit.Web.Client/App.config
+++ b/ClusterKit.Web/ClusterKit.Web.Client/App.config
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
+        <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Google.ProtocolBuffers" publicKeyToken="55f7125234beb589" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.4.1.555" newVersion="2.4.1.555" />
+        <assemblyIdentity name="Google.ProtocolBuffers" publicKeyToken="55f7125234beb589" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.4.1.555" newVersion="2.4.1.555"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
