--- a/ClusterKit.Web/ClusterKit.Web.Client/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Client/packages.config
@@ -14,9 +14,9 @@
   <package id="JetBrains.Annotations" version="9.2.0" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
-  <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net46" />
-  <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net46" />
-  <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net46" />
+  <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
+  <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
+  <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
   <package id="Serilog" version="1.5.11" targetFramework="net46" />
   <package id="StackExchange.Redis" version="1.0.481" targetFramework="net46" />
 </packages>
