--- a/ClusterKit.Web/ClusterKit.Web/ClusterKit.Web.csproj
+++ b/ClusterKit.Web/ClusterKit.Web/ClusterKit.Web.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ClusterKit.Web</RootNamespace>
     <AssemblyName>ClusterKit.Web</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -194,6 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="ClusterKit.Web.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
