--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -206,7 +206,7 @@
     <Compile Include="WebDescriptorTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
